test/Fail/ComplexIMPORT.agda
module ComplexIMPORT where

{-# IMPORT Prelude as P #-}
